# bin2header

./: .gitignore  CMakeLists.txt
src/: bin2header.cpp  convert.cpp  paths.cpp
