cmake_minimum_required(VERSION 3.1)

project(bin2header
  VERSION 0.2.0
  LANGUAGES CXX
)
set(CMAKE_CXX_STANDARD 11)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE "Release")
endif()

if(WIN32)
  set(EMBED_ICON OFF CACHE BOOL "Embeds icon resource into executable on Win32")
endif()

file(GLOB PROJECT_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp")

if(WIN32 AND EMBED_ICON)
  list(APPEND PROJECT_SOURCE_FILES "${CMAKE_CURRENT_SOURCE_DIR}/icon_resource.rc")
endif()

add_executable(${PROJECT_NAME} ${PROJECT_SOURCE_FILES})
target_compile_definitions(${PROJECT_NAME} PRIVATE _CRT_SECURE_NO_WARNINGS)
target_include_directories(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/src/include")

set(DOCDIR "${CMAKE_CURRENT_SOURCE_DIR}/share/doc/${PROJECT_NAME}")

install(TARGETS ${PROJECT_NAME}
  RUNTIME DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/bin
)
install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.txt" DESTINATION ${DOCDIR})

set_property(
  DIRECTORY
  PROPERTY ADDITIONAL_CLEAN_FILES ${PROJECT_NAME}.1.gz
)
